# therizinosauridae

./: CMakeLists.txt  LICENSE  README.md  config1.thz  main.c
include/: ast.h  lexer.h  parser.h
src/: ast.c  lexer.c  parser.c
tests/: test.h  test_lexer.c  test_main.c  test_parser.c
tests/examples/: config1.thz
